added image likeness

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,11 +77,12 @@
         android:id="@+id/textView"
         android:layout_alignBottom="@+id/amsCheckBox"
         android:layout_toEndOf="@+id/amsCheckBox"
-        android:layout_marginBottom="7sp" />
+        android:layout_marginBottom="7sp"
+        android:onClick="onClick" />
 
 
     <Button
-        android:id="@+id/amsSubmit"
+        android:id="@+id/btnBackToMain"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_alignParentEnd="true"
@@ -137,9 +138,9 @@
         android:id="@+id/submitText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/amsSubmit"
-        android:layout_alignStart="@+id/amsSubmit"
-        android:layout_below="@+id/amsSubmit"
+        android:layout_alignEnd="@+id/btnBackToMain"
+        android:layout_alignStart="@+id/btnBackToMain"
+        android:layout_below="@+id/btnBackToMain"
         android:layout_marginTop="2dp"
         android:gravity="center"
         android:text="SUBMIT"
